--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-starter-template",
+  "name": "connected-fsweb-v0",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sharp": "0.34.1",
     "tailwind-merge": "3.2.0"
   },
   "devDependencies": {
@@ -40,5 +41,12 @@
   ],
   "author": "Saikat Sardar",
   "license": "MIT",
-  "homepage": "https://github.com/MrSaikatS/nextjs-starter-template"
+  "homepage": "https://github.com/MrSaikatS/connected-fsweb-v0#readme",
+  "bugs": {
+    "url": "https://github.com/MrSaikatS/connected-fsweb-v0/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MrSaikatS/connected-fsweb-v0.git"
+  }
 }
