--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "connected-fsweb-v0",
+  "description": "ConnectEd Full Stack Web Ver.0",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -30,12 +31,16 @@
     "eslint-config-next": "15.3.2",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
+    "prisma": "^6.7.0",
     "tailwindcss": "4",
     "tw-animate-css": "1.2.9",
     "typescript": "5"
   },
   "trustedDependencies": [
+    "@prisma/engines",
     "@tailwindcss/oxide",
+    "esbuild",
+    "prisma",
     "sharp",
     "unrs-resolver"
   ],
