--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,9 @@
     "pulkitgangwar.nextjs-snippets",
     "esbenp.prettier-vscode",
     "yoavbls.pretty-ts-errors",
-    "bradlc.vscode-tailwindcss"
+    "bradlc.vscode-tailwindcss",
+    "dbaeumer.vscode-eslint",
+    "eamodio.gitlens",
+    "prisma.prisma"
   ]
 }
