--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next && next dev --turbopack",
+    "dev": "rimraf .next && next dev --turbopack",
     "build": "next lint && next build",
     "start": "next start",
     "lint": "next lint",
-    "prod": "rm -rf .next && next lint && next build && next start"
+    "prod": "rimraf .next && next lint && next build && next start"
   },
   "dependencies": {
     "class-variance-authority": "0.7.1",
@@ -18,6 +18,7 @@
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "rimraf": "6.0.1",
     "sharp": "0.34.1",
     "tailwind-merge": "3.2.0"
   },
@@ -31,7 +32,7 @@
     "eslint-config-next": "15.3.2",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "prisma": "^6.7.0",
+    "prisma": "6.7.0",
     "tailwindcss": "4",
     "tw-animate-css": "1.2.9",
     "typescript": "5"
