--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prod": "rimraf .next && next lint && next build && next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.508.0",
@@ -18,9 +21,11 @@
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.3",
     "rimraf": "6.0.1",
     "sharp": "0.34.1",
-    "tailwind-merge": "3.2.0"
+    "tailwind-merge": "3.2.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
