--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "prod": "rimraf .next && next lint && next build && next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@t3-oss/env-nextjs": "^0.13.4",
+    "@hookform/resolvers": "5.0.1",
+    "@radix-ui/react-checkbox": "1.3.1",
+    "@radix-ui/react-label": "2.1.6",
+    "@radix-ui/react-slot": "1.2.2",
+    "@t3-oss/env-nextjs": "0.13.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.508.0",
@@ -23,11 +23,12 @@
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.56.3",
+    "react-hook-form": "7.56.3",
+    "react-toastify": "11.0.5",
     "rimraf": "6.0.1",
     "sharp": "0.34.1",
     "tailwind-merge": "3.2.0",
-    "zod": "^3.24.4"
+    "zod": "3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
