--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,10 @@
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/connected_db"
 
-# Example API Key
-API_KEY="your_api_key_here"
+# Better Auth Secret Key
+BETTER_AUTH_SECRET=some-secret-key
 
-# Example Port for the application
-PORT=3000
-
-# Other common variables
-# NODE_ENV=development
-# SECRET_KEY=your_super_secret_key
+# Better Auth Base URL (Server Side)
+BETTER_AUTH_URL="http://localhost:3000"
