--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "build": "next lint && next build",
     "start": "next start",
     "lint": "next lint",
-    "prod": "rimraf .next && next lint && next build && next start"
+    "prod": "rimraf .next && next lint && next build && next start",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:flush": "prisma migrate reset",
+    "studio": "prisma studio --browser none"
   },
   "dependencies": {
     "@hookform/resolvers": "5.0.1",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-checkbox": "1.3.1",
     "@radix-ui/react-label": "2.1.6",
     "@radix-ui/react-slot": "1.2.2",
     "@t3-oss/env-nextjs": "0.13.4",
+    "better-auth": "1.2.7",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.508.0",
@@ -25,7 +31,6 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.56.3",
     "react-toastify": "11.0.5",
-    "rimraf": "6.0.1",
     "sharp": "0.34.1",
     "tailwind-merge": "3.2.0",
     "zod": "3.24.4"
@@ -41,6 +46,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "prisma": "6.7.0",
+    "rimraf": "6.0.1",
     "tailwindcss": "4",
     "tw-animate-css": "1.2.9",
     "typescript": "5"
