base URL (client side) env

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ BETTER_AUTH_SECRET=some-secret-key
 
 # Better Auth Base URL (Server Side)
 BETTER_AUTH_URL="http://localhost:3000"
+
+# Better Auth Base URL (Client Side)
+NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:3000"
