--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "5.0.1",
+    "@node-rs/argon2": "2.0.2",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-checkbox": "1.3.1",
     "@radix-ui/react-label": "2.1.6",
