--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "better-auth": "1.2.8",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "ky": "^1.8.1",
     "lucide-react": "0.511.0",
+    "mime-types": "3.0.1",
+    "minio": "8.0.5",
     "next": "15.3.2",
     "next-themes": "0.4.6",
     "react": "19.1.0",
@@ -34,11 +37,13 @@
     "react-toastify": "11.0.5",
     "sharp": "0.34.1",
     "tailwind-merge": "3.3.0",
+    "use-file-picker": "2.1.2",
     "zod": "3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
     "@tailwindcss/postcss": "4",
+    "@types/mime-types": "2.1.4",
     "@types/node": "22",
     "@types/react": "19",
     "@types/react-dom": "19",
@@ -54,6 +59,7 @@
     "typescript": "5"
   },
   "trustedDependencies": [
+    "@prisma/client",
     "@prisma/engines",
     "@tailwindcss/oxide",
     "esbuild",
